welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: not found: type int
	var x:int=nbPas 
              ^Methods:4: error: not found: value nbPas
	var x:int=nbPas 
                  ^Methods:5: error: not found: type int
	var y:int=dejaFait
              ^Methods:5: error: not found: value dejaFait
	var y:int=dejaFait
                  ^Methods:11: error: not found: value dejaFait
   while(dejaFait!=nbPas){
         ^