welcome.lessons.welcome.methods.basics.Methods.scala.code

def goAndGet() {
	var x:int=nbPas 
	var y:int=dejaFait
	while(!estSurBiscuit()){
		avance();
		x=x+1;
	} 
	prendBiscuit()
   while(dejaFait!=nbPas){
   	recule();
   } 
   poseBiscuit();
}
    